--- a/src/pages/guide/testnet/empeiria/installation.mdx
+++ b/src/pages/guide/testnet/empeiria/installation.mdx
@@ -1,6 +1,6 @@
-import { Callout } from 'nextra/components'
+import { Callout, Code, CopyToClipboard, Playground, Tabs } from 'nextra/components'
 
-export const nodeName = 'Empeiria Testnet'
+export const nodeName = 'Empeiria'
 
 ## {nodeName} Installation Guide
 
@@ -26,3 +26,204 @@ export const nodeName = 'Empeiria Testnet'
 * **RAM:** 8 GB or more
 * **Disk Space:** 200 GB SSD or more
 * **Network:** Broadband internet connection with at least 1 Mbps upload/download speed
+
+## Installation
+### 1. Setup prerequisites
+
+```bash filename="Install Package" copy
+sudo apt update -q
+sudo apt install -y -qq make unzip clang pkg-config lz4 libssl-dev build-essential git jq ncdu bsdmainutils htop aria2 pv
+```
+
+```bash filename="Install Go" copy
+GO_VERSION=$(curl -s https://go.dev/VERSION?m=text | head -n1)
+wget "https://dl.google.com/go/${GO_VERSION}.linux-amd64.tar.gz"
+sudo tar -C /usr/local -xzf "${GO_VERSION}.linux-amd64.tar.gz"
+rm "${GO_VERSION}.linux-amd64.tar.gz"
+echo "export GOROOT=/usr/local/go" | tee -a ~/.profile
+echo "export GOPATH=\$HOME/go" | tee -a ~/.profile
+echo "export PATH=\$PATH:/usr/local/go/bin:\$HOME/go/bin" | tee -a ~/.profile
+source ~/.profile
+```
+
+### 2. Install Empe Binary
+
+```bash filename="Install Story" copy
+OS_TYPE=$(uname -s | tr '[:upper:]' '[:lower:]')
+ARCH_TYPE=$(uname -m)
+ARCH_TYPE=$(echo $ARCH_TYPE | sed 's/x86_64/amd64/' | sed 's/aarch64/arm64/')
+EMPE_NAME="emped_v0.2.2_${OS_TYPE}_${ARCH_TYPE}.tar.gz"
+EMPE_DOWNLOAD_URL="https://github.com/empe-io/empe-chain-releases/blob/master/v0.2.2/${EMPE_NAME}"
+wget $EMPE_DOWNLOAD_URL
+tar -xvf $EMPE_NAME
+sudo chmod +x emped
+sudo mv emped /usr/local/bin/emped
+```
+
+Verify the installation by checking the version
+```bash copy
+emped version
+```
+
+### 3. Configure the Node
+Use `emped init` to set up your node for the Odyssey testnet. Replace `'Your Node Name'` with a unique identifier.
+```bash copy
+CHAIN_ID='empe-testnet-2'
+MONIKER='Your Node Name'
+DAEMON_HOME=$HOME/.empe-chain
+emped init --network $CHAIN_ID --moniker $MONIKER --home $DAEMON_HOME
+rm -rf ~/.empe-chain/config/genesis.json
+```
+
+### 4. Configure the Settings
+```bash copy
+DAEMON_HOME=$HOME/.empe-chain
+git clone https://github.com/empe-io/empe-chains.git
+cp empe-chains/testnet-2/genesis.json $DAEMON_HOME/config/genesis.json
+sed -e "s|persistent_peers = \".*\"|persistent_peers = \"$(cat .data | grep -oP 'Persistent peers\s+\K\S+')\"|g" $DAEMON_HOME/config/config.toml > $DAEMON_HOME/config/config.toml.tmp
+mv $DAEMON_HOME/config/config.toml.tmp  $DAEMON_HOME/config/config.toml
+sed -e "s|minimum-gas-prices = \".*\"|minimum-gas-prices = \"$(cat .data | grep -oP 'Minimum Gas Price\s+\K\S+')\"|g" $DAEMON_HOME/config/app.toml > $DAEMON_HOME/config/app.toml.tmp
+mv $DAEMON_HOME/config/app.toml.tmp  $DAEMON_HOME/config/app.toml
+```
+
+### 5. Install and Initialize Cosmovisor
+Download the Cosmovisor binary using the `go install` command
+```bash copy
+go install cosmossdk.io/tools/cosmovisor/cmd/cosmovisor@latest
+cosmovisor version
+```
+Initialize Cosmovisor
+```bash copy
+DAEMON_NAME=emped DAEMON_HOME=$HOME/.empe-chain cosmovisor init $(which emped)
+```
+
+### 5. Create Service
+
+To ensure that the Story and Geth processes run continuously and restart automatically on failure, you can create a systemd service. This will help manage the lifecycle of the processes and ensure they start on boot.
+
+Create a new systemd service file for Story:
+```bash filename="Create Story Service" copy
+sudo tee /etc/systemd/system/story.service >/dev/null <<EOF
+[Unit]
+Description=Cosmovisor Story Node
+After=network-online.target
+
+[Service]
+User=$USER
+Type=simple
+WorkingDirectory=$HOME/.story/story
+ExecStart=$(which cosmovisor) run run --home $HOME/.story/story
+Restart=on-failure
+RestartSec=3
+LimitNOFILE=infinity
+LimitNPROC=infinity
+Environment="DAEMON_NAME=story"
+Environment="DAEMON_HOME=$HOME/.story/story"
+Environment="UNSAFE_SKIP_BACKUP=true"
+Environment="PATH=$PATH"
+
+[Install]
+WantedBy=multi-user.target
+EOF
+```
+
+Create a new systemd service file for Geth:
+```bash filename="Create Geth Service" copy
+sudo tee /etc/systemd/system/story-geth.service >/dev/null <<EOF
+[Unit]
+Description=Story execution daemon
+After=network-online.target
+
+[Service]
+User=$USER
+ExecStart=$(which story-geth) --odyssey --syncmode full --datadir $HOME/.story/geth/odyssey  --http --http.addr 127.0.0.1 --http.port 8545 --ws --ws.addr 127.0.0.1 --ws.port 8546 --http.vhosts=*
+Restart=always
+RestartSec=3
+LimitNOFILE=infinity
+LimitNPROC=infinity
+Environment="PATH=$PATH"
+
+[Install]
+WantedBy=multi-user.target
+```
+
+Now apply the service configuration and start the services
+```bash copy
+sudo systemctl enable story.service
+sudo systemctl enable story-geth.service
+sudo systemctl restart story.service
+sudo systemctl restart story-geth.service
+```
+
+To check the logs for the story service, use the following command:
+```bash copy
+sudo journalctl -fu story -o cat
+```
+To view the logs for the geth service, use the following command:
+```bash copy
+sudo journalctl -fu story-geth -o cat
+```
+
+### 6. Applying Peers
+To enhance network synchronization, we recommend applying our peers by following the steps below, or you can change the RPC URL to your own desired RPC URL:
+```bash copy
+PERSISTENT_PEERS=$(curl "https://scan.aldebaranode.xyz/api/scan/peers?rpc_url=https://rpc-story-testnet.aldebaranode.xyz" | jq -r 'flatten | join(",")')
+sed -i.bak -e "s/^persistent_peers *=.*/persistent_peers = \"$PERSISTENT_PEERS\"/" $HOME/.story/story/config/config.toml
+```
+
+### 7. Applying Snapshot
+To apply a snapshot for faster synchronization, follow the steps below:
+
+#### Download snapshot
+<Tabs items={['Default (Prunned)', 'Archive']}>
+  <Tabs.Tab>
+```bash copy
+STORY_SNAPSHOT_URL="https://snapshots.aldebaranode.xyz/story/default/story.tar.lz4"
+STORY_GETH_SNAPSHOT_URL="https://snapshots.aldebaranode.xyz/story/default/geth.tar.lz4"
+(echo $STORY_SNAPSHOT_URL; echo $STORY_GETH_SNAPSHOT_URL) | aria2c -x 16 -s 16 -k 1M -i -
+```
+  </Tabs.Tab>
+  <Tabs.Tab>
+```bash copy
+STORY_SNAPSHOT_URL="https://snapshots.aldebaranode.xyz/story/archive/story.tar.lz4"
+STORY_GETH_SNAPSHOT_URL="https://snapshots.aldebaranode.xyz/story/archive/geth.tar.lz4"
+(echo $STORY_SNAPSHOT_URL; echo $STORY_GETH_SNAPSHOT_URL) | aria2c -x 16 -s 16 -k 1M -i -
+```
+  </Tabs.Tab>
+</Tabs>
+
+#### Stop Service
+```bash copy
+sudo systemctl stop story
+sudo systemctl stop story-geth
+```
+
+#### Backup Files
+```bash copy
+cp $HOME/.story/story/data/priv_validator_state.json $HOME/.story/priv_validator_state.json.backup
+```
+
+#### Remove Old Data
+```bash copy
+rm -rf $HOME/.story/story/data
+rm -rf $HOME/.story/geth/odyssey/geth/chaindata
+```
+
+#### Extract Snapshot
+```bash copy
+mkdir -p $HOME/.story/story/data
+mkdir -p $HOME/.story/geth/odyssey/geth/chaindata
+lz4 -d -c story.tar.lz4 | pv | sudo tar xv -C $HOME/.story/story/ > /dev/null
+lz4 -d -c geth.tar.lz4 | pv | sudo tar xv -C $HOME/.story/geth/odyssey/geth/ > /dev/null
+```
+
+#### Restore Files
+```bash copy
+cp $HOME/.story/priv_validator_state.json.backup $HOME/.story/story/data/priv_validator_state.json
+```
+
+#### Start Service
+```bash copy
+sudo systemctl start story
+sudo systemctl start story-geth
+```
