--- a/src/pages/guide/story/installation.mdx
+++ b/src/pages/guide/story/installation.mdx
@@ -77,9 +77,9 @@ story-geth version
 ```
 
 ### 3. Configure the Node
-Use `story init` to set up your node for the Aeneid testnet. Replace `'Your Node Name'` with a unique identifier.
+Use `story init` to set up your node for the Mainnet. Replace `'Your Node Name'` with a unique identifier.
 ```bash copy
-CHAIN_ID='aeneid'
+CHAIN_ID='story'
 MONIKER='Your Node Name'
 DAEMON_HOME=$HOME/.story/story
 story init --network $CHAIN_ID --moniker $MONIKER --home $DAEMON_HOME
@@ -135,7 +135,7 @@ After=network-online.target
 
 [Service]
 User=$USER
-ExecStart=$(which story-geth) --aeneid --syncmode full --datadir $HOME/.story/geth/aeneid  --http --http.addr 127.0.0.1 --http.port 8545 --ws --ws.addr 127.0.0.1 --ws.port 8546 --http.vhosts=*
+ExecStart=$(which story-geth) --story --syncmode full --datadir $HOME/.story/geth/story  --http --http.addr 127.0.0.1 --http.port 8545 --ws --ws.addr 127.0.0.1 --ws.port 8546 --http.vhosts=*
 Restart=always
 RestartSec=3
 LimitNOFILE=infinity
@@ -206,15 +206,15 @@ cp $HOME/.story/story/data/priv_validator_state.json $HOME/.story/priv_validator
 #### Remove Old Data
 ```bash copy
 rm -rf $HOME/.story/story/data
-rm -rf $HOME/.story/geth/aeneid/geth/chaindata
+rm -rf $HOME/.story/geth/story/geth/chaindata
 ```
 
 #### Extract Snapshot
 ```bash copy
 mkdir -p $HOME/.story/story/data
-mkdir -p $HOME/.story/geth/aeneid/geth/chaindata
+mkdir -p $HOME/.story/geth/story/geth/chaindata
 lz4 -d -c story.tar.lz4 | pv | sudo tar xv -C $HOME/.story/story/ > /dev/null
-lz4 -d -c geth.tar.lz4 | pv | sudo tar xv -C $HOME/.story/geth/aeneid/geth/ > /dev/null
+lz4 -d -c geth.tar.lz4 | pv | sudo tar xv -C $HOME/.story/geth/story/geth/ > /dev/null
 ```
 
 #### Restore Files
