--- a/src/pages/guide/testnet/cortensor/installation.mdx
+++ b/src/pages/guide/testnet/cortensor/installation.mdx
@@ -59,12 +59,13 @@ After the docker-compose.yaml is generated, you need to modify the environment v
 - **RPC_URL**: Your ARB Sepolia RPC URL, which you can obtain by running your own node or using a service provider like Ankr, Alchemy, or Infura.
 - **PUBLIC_KEY**: The EVM address of your miner node.
 - **PRIVATE_KEY**: The EVM private key of your miner node.
-- **LLM_OPTION_GPU**: Enable GPU support (0 or 1).
-- **LLM_OPTION_GPU_THRESHOLD**: Leave to -1 as automatic mode or you can configure your threshold, this represents number of LLM layers to be offload to GPU.
 
 For more information about GPU support please refer to the [official website](https://docs.cortensor.network/getting-started/installation-and-setup#enable-gpu-support)
 
-![Env Variable](/cortensor/env.png)
+![Cortensor Env Variable](/cortensor/cor-env.png)
+
+You can also adjust the allocated CPU for each llm container (default: 4)
+![LLM Env Variable](/cortensor/llm-env.png)
 
 ## Step 4 - Run the Nodes
 <Callout type="info">
